Fixed client-item overlapping navbar

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
     align-items: center;
     top: 0px;
     left: 0px;
-    
+    z-index: 100;
 }
 #navbar::before{
     content: "";
